# constantia

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  build-win64-cmake.bat  build.bat  imgui.ini  run.bat  run.sh  tasks.todo
data/: imgui.ini
data/shaders/: basic.frag  basic.vert  light.frag  postprocessing.frag  postprocessing.vert
include/constantia/: application.h  camera.h  core.h  editor.h  index_buffer.h  layer.h  mesh.h  model.h  renderer.h  shader.h  texture.h  vertex_array.h  vertex_buffer.h  vertex_buffer_layout.h  window.h
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: gl.h
lib/glad/src/: gl.c
src/: application.cpp  application.h  camera.cpp  camera.h  editor.cpp  editor.h  entity.h  idk_math.h  index_buffer.cpp  index_buffer.h  layer.h  main.cpp  memory.cpp  memory.h  mesh.cpp  model.cpp  model.h  opengl_renderer.cpp  opengl_renderer.h  renderer.cpp  scene.h  shader.cpp  shader.h  sponza.cpp  texture.cpp  texture.h  types.cpp  types.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.h  window.cpp
src/examples/framebuffers/: framebuffers.cpp  framebuffers.h
src/examples/ray-tracing/: ray_tracing.cpp  ray_tracing.h
src/examples/sponza/: sponza.cpp  sponza.h
